<resources>
    <string name="app_name">Organizer</string>
    <string name="app_contact" translatable="false">evan.explodes@gmail.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Feature: Home -->
    <string name="home_dialog_title_create_category">Create category</string>
    <string name="home_error_category_name_empty">Categories must have a title</string>
    <string name="home_error_category_name_empty_retry_action">Retry</string>

    <!-- Feature: Nav -->
    <string name="nav_title_create_category">Create category</string>
    <string name="nav_title_share">Share</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_categories">Categories</string>

    <!-- Feature: CategoryList -->
    <string name="category_list_content_warning">Warning</string>
    <string name="category_list_empty">You have no categories!\nThe button on the bottom-right of your screen will help with that.</string>
    <string name="category_list_content_fab">Create category</string>
    <plurals name="category_list_num_items">
        <item quantity="one">1 item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <!-- Feature: CategoryDetail -->
    <string name="category_detail_content_fab">Create item</string>
    <string name="category_detail_create_item">Create item</string>
    <string name="category_detail_item_name_empty">Categories must have a title</string>
    <string name="category_detail_item_empty_retry_action">Retry</string>
    <string name="category_detail_delete_category">Delete category</string>
    <string name="category_detail_delete_category_confirmation">Deleting this category will also delete all of the items in this category. Are you sure you want to continue?</string>
    <plurals name="category_detail_rating">
        <item quantity="one">1 star</item>
        <item quantity="other">%d stars</item>
    </plurals>

    <!-- Feature: ItemDetail -->
    <string name="item_detail_content_image">Custom item image</string>
    <string name="item_detail_item_name_hint">Item name</string>
    <string name="item_detail_item_description_hint">Description</string>
    <string name="item_detail_item_missing_name">Name cannot be empty</string>
    <string name="item_detail_delete_item">Delete item</string>
    <string name="item_detail_delete_item_confirmation">Deleting this item is permanent. Are you sure you want to continue?</string>
    <string name="item_detail_delete_item_confirmation_with_photo">Deleting this item will also permanently delete the attachment from Organizer. Are you sure you want to continue?</string>
    <string name="item_detail_select_image_cancelled">Photo selection cancelled</string>
    <string name="item_detail_select_image_download_error">There was an error getting your photo</string>
    <string name="item_detail_select_image_retry">Retry</string>

</resources>
